# agent-workflow-factory

./: .gitignore  README.md  pyproject.toml  start.sh
docs/: architecture.md  release-checklist.md  v0.2-roadmap.md
examples/: README.md  executor-result.example.json  executor-runtime-binding.example.json  fine-grained-plan-output.example.json  multi-repo-plan-output.example.json  requirement-plan-output.example.json  scaffold-output.example.json  scan-output.example.json
schemas/: adapter_registry.schema.json  executor_request.schema.json  executor_result.schema.json  handoff_bundle.schema.json  loop_cases.schema.json  loop_result.schema.json  requirement_plan.schema.json  runtime_status.schema.json  scaffold_manifest.schema.json  scan_result.schema.json
src/agent_workflow_factory/: cli.py  executor.py  executor_runtime.py  loop.py  planner.py  scaffold.py  scanner.py
templates/cases/: loop_cases.example.json
templates/tracking/: findings.template.md  progress.template.md  task_plan.template.md
tracking/: index.md
tracking/self-bootstrap-v1/: findings.md  progress.md  task_plan.md
tracking/v0.2-foundation/: findings.md  progress.md  task_plan.md
tracking/v0.3-executor-binding/: findings.md  progress.md  task_plan.md
tracking/v0.4-executor-runtime/: findings.md  progress.md  task_plan.md
tracking/v0.5-fine-grained-planning/: findings.md  progress.md  task_plan.md
tracking/v0.6-polish-and-release/: findings.md  progress.md  task_plan.md
tracking/v0.7-practical-commit-lifecycle/: findings.md  progress.md  task_plan.md
